CHANGELOG
=========

2018-02-26
----------

### check-anitya
* Added initial code
* Finds project IDs itself

### common
* config: added config read function
* zypper: add package version parser